force-app/main/default/objects/WorkOrder/fields/After_Work_Comments__c.field-meta.xml
<CustomField>
    <fullName>After_Work_Comments__c</fullName>
    <inlineHelpText>Check the files related list to see the photos linked to the after work comments.</inlineHelpText>
    <label>After Work Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>