force-app/main/default/objects/WorkOrder/fields/ATAK_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Code__c</fullName>
    <formula>Asset.ATAK_Project_Code__c</formula>
    <label>ATAK Project Code</label>
    <type>Text</type>
</CustomField>