force-app/main/default/objects/WorkOrder/fields/Before_Work_Comments__c.field-meta.xml
<CustomField>
    <fullName>Before_Work_Comments__c</fullName>
    <inlineHelpText>Check the files related list to see the photos linked to the before work comment.</inlineHelpText>
    <label>Before Work Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>