force-app/main/default/objects/WorkOrder/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>manual checkbox set by BS when an work order has been invoiced</description>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>