force-app/main/default/objects/WorkOrder/fields/Check_In_At_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Check_In_At_Work_Required__c</fullName>
    <formula>ServiceContract.ParentServiceContract.Check_In_At_Work_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-In-At-Work Required</label>
    <type>Checkbox</type>
</CustomField>