force-app/main/default/objects/WorkOrder/fields/Check_In_Work__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Work__c</fullName>
    <formula>Account.Check_In_Work__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-In @Work</label>
    <type>Checkbox</type>
</CustomField>