force-app/main/default/objects/WorkOrder/fields/Checkin_Deviation_KM__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Deviation_KM__c</fullName>
    <formula>DISTANCE(
    GEOLOCATION(Latitude, Longitude), 
    GEOLOCATION(Checkin_Location__Latitude__s, Checkin_Location__Longitude__s), 
    &apos;km&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkin Deviation (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>