force-app/main/default/objects/WorkOrder/fields/Checkin_Location__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Location__c</fullName>
    <label>Checkin Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>