force-app/main/default/objects/WorkOrder/fields/Collected_Items__c.field-meta.xml
<CustomField>
    <fullName>Collected_Items__c</fullName>
    <label>Collected Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>