force-app/main/default/objects/WorkOrder/fields/Current_User_is_CM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_CM__c</fullName>
    <formula>ServiceTerritory.Main_Responsible__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is CM</label>
    <type>Checkbox</type>
</CustomField>