force-app/main/default/objects/WorkOrder/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <formula>&quot; / &quot;&amp;ServiceContract.External_Contract_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference</label>
    <type>Text</type>
</CustomField>