force-app/main/default/objects/WorkOrder/fields/Depot_Visit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Depot_Visit_Comments__c</fullName>
    <label>Depot Visit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>