force-app/main/default/objects/WorkOrder/fields/Depot_Visit_Planned__c.field-meta.xml
<CustomField>
    <fullName>Depot_Visit_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depot Visit Planned</label>
    <type>Checkbox</type>
</CustomField>