force-app/main/default/objects/WorkOrder/fields/Drop_Off_Items__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Items__c</fullName>
    <label>Drop Off Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>