force-app/main/default/objects/WorkOrder/fields/Excecution_Week__c.field-meta.xml
<CustomField>
    <fullName>Excecution_Week__c</fullName>
    <formula>ISOWEEK( StartDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excecution Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>