force-app/main/default/objects/WorkOrder/fields/Goodwill_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Tasks__c</fullName>
    <label>Goodwill Tasks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>