force-app/main/default/objects/WorkOrder/fields/Has_Kilometers_Booked__c.field-meta.xml
<CustomField>
    <fullName>Has_Kilometers_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Kilometers Booked</label>
    <type>Checkbox</type>
</CustomField>