force-app/main/default/objects/WorkOrder/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <formula>IF(
NOT(ISBLANK( Quote__c )), 
&quot;Extra Work&quot;, 
TEXT( ServiceContract.Contract_type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>