force-app/main/default/objects/WorkOrder/fields/Invoicing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Remarks__c</fullName>
    <label>Invoicing Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>