force-app/main/default/objects/WorkOrder/fields/Is_First_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_First_of_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First of Day</label>
    <type>Checkbox</type>
</CustomField>