force-app/main/default/objects/WorkOrder/fields/LMRA__c.field-meta.xml
<CustomField>
    <fullName>LMRA__c</fullName>
    <label>LMRA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited</fullName>
                <default>true</default>
                <label>Limited</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>