force-app/main/default/objects/WorkOrder/fields/LMRA_Done__c.field-meta.xml
<CustomField>
    <fullName>LMRA_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMRA Done</label>
    <type>Checkbox</type>
</CustomField>