force-app/main/default/objects/WorkOrder/fields/LMRA_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>LMRA_Type_formula__c</fullName>
    <formula>TEXT(Account.LMRA_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMRA Type</label>
    <type>Text</type>
</CustomField>