force-app/main/default/objects/WorkOrder/fields/Mobile_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Contract_Manager__c</fullName>
    <description>ServiceTerritory.Owner:User.FirstName</description>
    <formula>ServiceTerritory.Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Contract Manager</label>
    <type>Text</type>
</CustomField>