force-app/main/default/objects/WorkOrder/fields/Name_Commercial_Contract__c.field-meta.xml
<CustomField>
    <fullName>Name_Commercial_Contract__c</fullName>
    <description>Technical field used as merge field in emailtemplates</description>
    <formula>ServiceContract.ParentServiceContract.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Commercial Contract</label>
    <type>Text</type>
</CustomField>