force-app/main/default/objects/WorkOrder/fields/Name_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Name_Contract_Manager__c</fullName>
    <description>Technical field used as merge field in emailtemplates</description>
    <formula>ServiceTerritory.Owner:User.FirstName &amp;&quot; &quot;&amp; ServiceTerritory.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Contract Manager</label>
    <type>Text</type>
</CustomField>