force-app/main/default/objects/WorkOrder/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>comes from the Location</description>
    <label>Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Work Orders (Operating Hours)</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>