force-app/main/default/objects/WorkOrder/fields/PDF_Status__c.field-meta.xml
<CustomField>
    <fullName>PDF_Status__c</fullName>
    <label>PDF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Ready to be Generated</fullName>
                <default>true</default>
                <label>Ready to be Generated</label>
            </value>
            <value>
                <fullName>Ready to be Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not Generated - No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>