force-app/main/default/objects/WorkOrder/fields/Pick_Up_Items__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Items__c</fullName>
    <label>Pick Up Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>