force-app/main/default/objects/WorkOrder/fields/Production_Work__c.field-meta.xml
<CustomField>
    <fullName>Production_Work__c</fullName>
    <formula>WorkType.Name = &quot;Production Work&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Work ?</label>
    <type>Checkbox</type>
</CustomField>