force-app/main/default/objects/WorkOrder/fields/Reviewed_for_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_for_Service_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed for Service Report</label>
    <type>Checkbox</type>
</CustomField>