force-app/main/default/objects/WorkOrder/fields/Rework_for_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Rework_for_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rework for Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>