force-app/main/default/objects/WorkOrder/fields/Rework_Planned__c.field-meta.xml
<CustomField>
    <fullName>Rework_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rework Planned</label>
    <type>Checkbox</type>
</CustomField>