force-app/main/default/objects/WorkOrder/fields/Rework_reasons__c.field-meta.xml
<CustomField>
    <fullName>Rework_reasons__c</fullName>
    <label>Rework reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete work</fullName>
            </value>
            <value>
                <fullName>Quality issues</fullName>
            </value>
            <value>
                <fullName>Customer feedback</fullName>
            </value>
            <value>
                <fullName>Missed tasks</fullName>
            </value>
            <value>
                <fullName>Environmental conditions</fullName>
            </value>
            <value>
                <fullName>Material issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>