force-app/main/default/objects/WorkOrder/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>Technical field used as merge field in emailtemplates</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>