force-app/main/default/objects/WorkOrder/fields/Shop_Visit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_Amount__c</fullName>
    <label>Shop Visit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>