force-app/main/default/objects/WorkOrder/fields/Shop_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_Date__c</fullName>
    <label>Shop Visit Date</label>
    <type>Date</type>
</CustomField>