force-app/main/default/objects/WorkOrder/fields/Shop_Visit_Done__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shop Visit Done</label>
    <type>Checkbox</type>
</CustomField>