force-app/main/default/objects/WorkOrder/fields/Shop_Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_Duration__c</fullName>
    <formula>(Shop_Visit_End_Time__c - Shop_Visit_Start_Time__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Visit Duration (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>