force-app/main/default/objects/WorkOrder/fields/Shop_Visit_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_End_Time__c</fullName>
    <label>Shop Visit End Time</label>
    <type>DateTime</type>
</CustomField>