force-app/main/default/objects/WorkOrder/fields/Shop_Visit_Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Shop_Visit_Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shop Visit Reviewed/Approved</label>
    <type>Checkbox</type>
</CustomField>