force-app/main/default/objects/WorkOrder/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <formula>Account.Signature_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>