force-app/main/default/objects/WorkOrder/fields/Special_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment__c</fullName>
    <label>Special Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>