force-app/main/default/objects/WorkOrder/fields/Trigger_Notification_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Notification_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Notification to Customer</label>
    <type>Checkbox</type>
</CustomField>