force-app/main/default/objects/WorkOrder/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>sed to avoid adding WOL as a Work Step in certain use cases.</description>
    <formula>WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>