force-app/main/default/objects/WorkOrder/fields/Waste_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Waste_Quantity__c</fullName>
    <label>Waste Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>