force-app/main/default/objects/WorkOrder/fields/Waste_to_Drop_Off__c.field-meta.xml
<CustomField>
    <fullName>Waste_to_Drop_Off__c</fullName>
    <label>Waste to Drop Off</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Waste</valueSetName>
    </valueSet>
</CustomField>