force-app/main/default/objects/WorkOrder/fields/Waste_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Waste_Unit_of_Measure__c</fullName>
    <label>Waste Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>M³</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>