force-app/main/default/objects/WorkOrder/fields/Waste_Visit_Planned__c.field-meta.xml
<CustomField>
    <fullName>Waste_Visit_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waste Visit Planned</label>
    <type>Checkbox</type>
</CustomField>