force-app/main/default/objects/WorkOrder/fields/WO_with_Goodwill_Tasks__c.field-meta.xml
<CustomField>
    <fullName>WO_with_Goodwill_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WO with Goodwill Tasks</label>
    <type>Checkbox</type>
</CustomField>