force-app/main/default/objects/WorkOrder/fields/WOL_Already_Added__c.field-meta.xml
<CustomField>
    <fullName>WOL_Already_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WOL Already Added</label>
    <type>Checkbox</type>
</CustomField>