force-app/main/default/objects/WorkOrder/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Shop Visit</fullName>
            </value>
            <value>
                <fullName>Depot Visit</fullName>
            </value>
            <value>
                <fullName>Waste Depot Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>